# batchpp

./: CMakeLists.txt  LICENSE  README.md
docs/: language_cheat_sheet.md  lexical_rules.md  style_guide.md
extensions/batchpp-support/: README.md  batchpp-support-0.0.1.vsix  extension.js  language-configuration.json  package.json
extensions/batchpp-support/snippets/: batpp.code-snippets
extensions/batchpp-support/syntaxes/: batpp.tmLanguage.json
src/: compiler_api.hpp  compiler_emit.cpp  compiler_internal.hpp  compiler_parse.cpp  compiler_transpile.cpp  compiler_utils.cpp  main.cpp
